# dynv6-sync

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
cicd/: debrelease.sh  maker.sh  osxupdate.sh
publish/: gpg.key.asc
publish/deb-unstable/conf/: distributions
publish/deb-unstable/dists/bookworm/: InRelease  Release  Release.gpg
publish/deb-unstable/dists/bookworm/main/binary-amd64/: Packages  Release
publish/deb-unstable/dists/bookworm/main/binary-arm64/: Packages  Release
publish/deb-unstable/dists/bullseye/: InRelease  Release  Release.gpg
publish/deb-unstable/dists/bullseye/main/binary-amd64/: Packages  Release
publish/deb-unstable/dists/bullseye/main/binary-arm64/: Packages  Release
publish/deb-unstable/pool/main/d/dynv6-sync/: dynv6-sync_0.1.0-1+deb11_amd64.deb  dynv6-sync_0.1.0-1+deb11_arm64.deb  dynv6-sync_0.1.0-1+deb12_amd64.deb  dynv6-sync_0.1.0-1+deb12_arm64.deb  dynv6-sync_0.2.0-1+deb11_amd64.deb  dynv6-sync_0.2.0-1+deb11_arm64.deb  dynv6-sync_0.2.0-1+deb12_amd64.deb  dynv6-sync_0.2.0-1+deb12_arm64.deb
publish/deb/conf/: distributions
publish/deb/dists/bookworm/: InRelease  Release  Release.gpg
publish/deb/dists/bookworm/main/binary-amd64/: Packages  Release
publish/deb/dists/bookworm/main/binary-arm64/: Packages  Release
publish/deb/dists/bullseye/: InRelease  Release  Release.gpg
publish/deb/dists/bullseye/main/binary-amd64/: Packages
publish/deb/dists/bullseye/main/binary-arm64/: Packages
publish/deb/pool/main/d/dynv6-sync/: dynv6-sync_0.2.0-1+deb11_amd64.deb  dynv6-sync_0.2.0-1+deb11_arm64.deb  dynv6-sync_0.2.0-1+deb12_amd64.deb  dynv6-sync_0.2.0-1+deb12_arm64.deb
src/: ideal.json  main.rs  resolve.rs
