[package]
name = "dynv6-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
dynv6-rs={ git = "https://github.com/JyJyJcr/dynv6-rs" }
futures = "0.3.31"
itertools = "0.14.0"
nix = { version = "0.30.1", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}

# [dev-dependencies]
# serde = "1.0.219"
