[package]
name = "dynv6-sync"
version = "0.2.0"
authors = ["JyJyJcr <82190170+JyJyJcr@users.noreply.github.com>"]
edition = "2024"
license = "WTFPL"
homepage = "https://github.com/JyJyJcr/dynv6-sync"
description = "Dynv6 Updater"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
dynv6-rs={ git = "https://github.com/JyJyJcr/dynv6-rs" }
futures = "0.3.31"
itertools = "0.14.0"
nix = { version = "0.30.1", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3.1"

# [dev-dependencies]
# serde = "1.0.219"

[package.metadata.deb]
name = "dynv6-sync"
section="net"
priority="optional"
depends = ["$auto"]
assets = [
    ["target/release/dynv6-sync", "usr/bin/dynv6-sync", "755"],
]
extended-description = """\
dynv6-sync is a simple dynv6 update program mainly for hook usage."""

# revision format
# let main revision num to be %
# debian: %+deb<deb ver>
# ubuntu: 0ubuntu%
# default revision is 1

[package.metadata.deb.variants.debian12]
depends = ["$auto","libssl3 (>= 3.0.0)"]
revision = "1+deb12"

[package.metadata.deb.variants.debian11]
depends = ["$auto","libssl1.1 (>= 1.1.1)"]
revision = "1+deb11"

# [package.metadata.deb.variants.ubuntu22]
# depends = ["$auto","libssl3 (>= 3.0.0)"]
# revision = "0ubuntu1"
